# Chess-Li

./: .gitignore  board.py  engine.py  magic.py  move.py  moves.py  plan.txt  position.py  utils.py  visualization.py
.cache/clangd/index/: adapter.hpp.BE3B5E3ADABBF1F7.idx  api_main.cpp.577CB1B5C9A703AA.idx  attacks.hpp.DD7758EA570CD0AE.idx  bitboard.hpp.45734F491629D425.idx  board.cpp.759FBA349E8CF282.idx  board.hpp.0FF10061854E95A9.idx  castling_rights.hpp.E0F1F1514CC9D981.idx  chess_ui.cpp.E889D0FE0765F421.idx  chess_ui.hpp.75845CACB9CB5D06.idx  engine.cpp.A596F31867598232.idx  engine.hpp.C020B8E85EC1840C.idx  main.cpp.9D9ACF5D77F3A1A9.idx  move.hpp.127E210560844D13.idx  piece.hpp.85C899A11F1AC5FF.idx  position.hpp.1310137C33AEA21B.idx  simple_server.cpp.77A763DB572DCFCF.idx  simple_server_fixed.cpp.C79CC69F58EBCFF4.idx  turn.hpp.4B29DB8A36819708.idx
Python Engine/: board.py  engine.py  moves.py  visualization.py
cpp Engine/: .gitignore  CMakeLists.txt  Dockerfile  README.md
cpp Engine/chess-ui/: package-lock.json  package.json
cpp Engine/chess-ui/src/: App.tsx  api.ts
cpp Engine/chess-ui/src/components/: BoardView.tsx  EvalBar.tsx
cpp Engine/src/: adapter.cpp  adapter.hpp  api_main.cpp  attacks.hpp  bitboard.hpp  board.cpp  board.hpp  castling_rights.hpp  chess_ui.cpp  chess_ui.hpp  engine.cpp  engine.hpp  main.cpp  move.hpp  piece.cpp  piece.hpp  position.hpp  simple_server.cpp  simple_server_fixed.cpp  turn.hpp  uci_main.cpp
